Clustered the cryptocurrencies with k-means

--- a/submission/starter-code.ipynb
+++ b/submission/starter-code.ipynb
@@ -571,49 +571,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list with the number of k-values from 1 to 11\n"
+    "# Create a list with the number of k-values from 1 to 11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an empty list to store the inertia values\n",
-    "\n",
-    "\n",
     "# Create a for loop to compute the inertia with each possible value of k\n",
     "# Inside the loop:\n",
     "# 1. Create a KMeans model using the loop counter for the n_clusters\n",
     "# 2. Fit the model to the data using `df_market_data_scaled`\n",
-    "# 3. Append the model.inertia_ to the inertia list\n"
+    "# 3. Append the model.inertia_ to the inertia list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a dictionary with the data to plot the Elbow curve\n",
-    "\n",
-    "\n",
-    "# Create a DataFrame with the data to plot the Elbow curve\n"
+    "# Create a DataFrame with the data to plot the Elbow curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot a line chart with all the inertia values computed with\n",
-    "# the different values of k to visually identify the optimal value for k.\n"
+    "# the different values of k to visually identify the optimal value for k."
    ]
   },
   {
@@ -646,58 +642,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the K-Means model using the best value for k\n"
+    "# Initialize the K-Means model using the best value for k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fit the K-Means model using the scaled DataFrame\n"
+    "# Fit the K-Means model using the scaled DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict the clusters to group the cryptocurrencies using the scaled DataFrame\n",
-    "\n",
-    "\n",
-    "# Print the resulting array of cluster values.\n"
+    "# Print the resulting array of cluster values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a copy of the scaled DataFrame\n"
+    "# Create a copy of the scaled DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add a new column to the copy of the scaled DataFrame with the predicted clusters\n",
-    "\n",
-    "\n",
-    "# Display the copy of the scaled DataFrame\n"
+    "# Display the copy of the scaled DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +697,7 @@
     "# `x=\"price_change_percentage_24h\"` and `y=\"price_change_percentage_7d\"`.\n",
     "# Color the graph points with the labels found using K-Means and\n",
     "# add the crypto name in the `hover_cols` parameter to identify\n",
-    "# the cryptocurrency represented by each data point.\n"
+    "# the cryptocurrency represented by each data point."
    ]
   },
   {
