Finished section: Scaled PCA DataFrame

--- a/submission/starter-code.ipynb
+++ b/submission/starter-code.ipynb
@@ -718,34 +718,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a PCA model instance and set `n_components=3`.\n"
+    "# Create a PCA model instance and set `n_components=3`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use the PCA model with `fit_transform` to reduce the original scaled DataFrame\n",
     "# down to three principal components.\n",
-    "\n",
-    "\n",
-    "# View the scaled PCA data\n"
+    "# View the scaled PCA data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Retrieve the explained variance to determine how much information\n",
-    "# can be attributed to each principal component.\n"
+    "# can be attributed to each principal component."
    ]
   },
   {
@@ -762,20 +760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a new DataFrame with the PCA data.\n",
-    "\n",
-    "\n",
     "# Copy the crypto names from the original scaled DataFrame\n",
-    "\n",
-    "\n",
     "# Set the coin_id column as index\n",
-    "\n",
-    "\n",
-    "# Display the scaled PCA DataFrame\n"
+    "# Display the scaled PCA DataFrame"
    ]
   },
   {
